# kanban-warden

./: AGENTS.md  README.md  __init__.py  after-install.md  plugin.yaml  pyproject.toml
docs/loop-supervisor/: v0.4-self-improvement.md
docs/superpowers/plans/: 2026-06-22-config-patch-v03.md  2026-06-22-improvement-proposals-v03.md  2026-06-22-self-improvement-package-v04.md  2026-06-22-self-improvement-review-decision-v04.md  2026-06-22-self-improvement-verification-v04.md  2026-06-23-plugin-send-delivery.md  2026-06-30-completed-tail-home-fallback.md
docs/superpowers/specs/: 2026-06-23-plugin-send-delivery-design.md
examples/: config.yaml
kanban_warden/: __init__.py  actions.py  board.py  cleanup.py  cli.py  config.py  config_patch.py  delivery.py  improvement.py  lock.py  outbox.py  remediation.py  rules.yaml  self_improvement.py  supervisor.py  warden.py
scripts/: check_hairou_warden.py  verify_mvp.py
src/kanban_warden/: __init__.py  actions.py  board.py  cli.py  config.py  improvement.py  lock.py  outbox.py  plugin.yaml  remediation.py  self_improvement.py  sqlite_utils.py  state.py  supervisor.py
tests/: test_actions.py  test_config.py  test_config_patch.py  test_deadlock_remediation.py  test_git_plugin_layout.py  test_improvement.py  test_loop_trace.py  test_self_improvement.py  test_warden.py
